--- a/chessboard/index.html
+++ b/chessboard/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="board">
+    <div class ="cell axe">8</div>
     <div class="cell white_cell">
         <img src="assets/rook_black.png" alt="black rook" width="26" height="26">
     </div>
@@ -33,6 +34,7 @@
     </div>
 </div>
 <div class="board">
+    <div class ="cell axe">7</div>
     <div class="cell black_cell">
         <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26">
     </div>
@@ -59,6 +61,7 @@
     </div>
 </div>
 <div class="board">
+    <div class ="cell axe">6</div>
     <div class="cell white_cell"></div>
     <div class="cell black_cell"></div>
     <div class="cell white_cell"></div>
@@ -69,6 +72,7 @@
     <div class="cell black_cell"></div>
 </div>
 <div class="board">
+    <div class ="cell axe">5</div>
     <div class="cell black_cell"></div>
     <div class="cell white_cell"></div>
     <div class="cell black_cell"></div>
@@ -79,6 +83,7 @@
     <div class="cell white_cell"></div>
 </div>
 <div class="board">
+    <div class ="cell axe">4</div>
     <div class="cell white_cell"></div>
     <div class="cell black_cell"></div>
     <div class="cell white_cell"></div>
@@ -89,6 +94,7 @@
     <div class="cell black_cell"></div>
 </div>
 <div class="board">
+    <div class ="cell axe">3</div>
     <div class="cell black_cell"></div>
     <div class="cell white_cell"></div>
     <div class="cell black_cell"></div>
@@ -99,6 +105,7 @@
     <div class="cell white_cell"></div>
 </div>
 <div class="board">
+    <div class ="cell axe">2</div>
     <div class="cell white_cell">
         <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26">
     </div>
@@ -125,6 +132,7 @@
     </div>
 </div>
 <div class="board">
+    <div class ="cell axe">1</div>
     <div class="cell black_cell">
         <img src="assets/rook_white.png" alt="white rook" width="26" height="26">
     </div>
@@ -149,6 +157,17 @@
     <div class="cell white_cell">
         <img src="assets/rook_white.png" alt="white rook" width="26" height="26">
     </div>
+</div>
+<div class = "board">
+    <div class = "cell axe"></div>
+    <div class = "cell axe">A</div>
+    <div class = "cell axe">B</div>
+    <div class = "cell axe">C</div>
+    <div class = "cell axe">D</div>
+    <div class = "cell axe">E</div>
+    <div class = "cell axe">F</div>
+    <div class = "cell axe">G</div>
+    <div class = "cell axe">H</div>
 </div>
 </body>
 </html>
