--- a/chessboard/index.html
+++ b/chessboard/index.html
@@ -6,168 +6,199 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="board">
-    <div class ="cell axe">8</div>
-    <div class="cell white_cell">
-        <img src="assets/rook_black.png" alt="black rook" width="26" height="26">
+<div class="chessboard">
+    <div class="board">
+        <div class="cell axe">
+            <img src="assets/hse.png" alt="hse" width="26" height="26" class="full-rotate">
+        </div>
+        <div class="cell axe">A</div>
+        <div class="cell axe">B</div>
+        <div class="cell axe">C</div>
+        <div class="cell axe">D</div>
+        <div class="cell axe">E</div>
+        <div class="cell axe">F</div>
+        <div class="cell axe">G</div>
+        <div class="cell axe">H</div>
+        <div class="cell axe">
+            <img src="assets/hse.png" alt="hse" width="26" height="26" class="full-rotate">
+        </div>
     </div>
-    <div class="cell black_cell">
-        <img src="assets/knight_black.png" alt="black knight" width="26" height="26">
+    <div class="board">
+        <div class="cell axe">8</div>
+        <div class="cell white_cell">
+            <img src="assets/rook_black.png" alt="black rook" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/knight_black.png" alt="black knight" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/bishop_black.png" alt="black bishop" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/queen_black.png" alt="black queen" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/king_black.png" alt="black king" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/bishop_black.png" alt="black bishop" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/knight_black.png" alt="black knight" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/rook_black.png" alt="black rook" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell axe">8</div>
     </div>
-    <div class="cell white_cell">
-        <img src="assets/bishop_black.png" alt="black bishop" width="26" height="26">
+    <div class="board">
+        <div class="cell axe">7</div>
+        <div class="cell black_cell">
+            <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell axe">7</div>
     </div>
-    <div class="cell black_cell">
-        <img src="assets/queen_black.png" alt="black queen" width="26" height="26">
+    <div class="board">
+        <div class="cell axe">6</div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell axe">6</div>
     </div>
-    <div class="cell white_cell">
-        <img src="assets/king_black.png" alt="black king" width="26" height="26">
+    <div class="board">
+        <div class="cell axe">5</div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell axe">5</div>
     </div>
-    <div class="cell black_cell">
-        <img src="assets/bishop_black.png" alt="black bishop" width="26" height="26">
+    <div class="board">
+        <div class="cell axe">4</div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell axe">4</div>
     </div>
-    <div class="cell white_cell">
-        <img src="assets/knight_black.png" alt="black knight" width="26" height="26">
+    <div class="board">
+        <div class="cell axe">3</div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell black_cell"></div>
+        <div class="cell white_cell"></div>
+        <div class="cell axe">3</div>
     </div>
-    <div class="cell black_cell">
-        <img src="assets/rook_black.png" alt="black rook" width="26" height="26">
+    <div class="board">
+        <div class="cell axe">2</div>
+        <div class="cell white_cell">
+            <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell axe">2</div>
     </div>
-</div>
-<div class="board">
-    <div class ="cell axe">7</div>
-    <div class="cell black_cell">
-        <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26">
+    <div class="board">
+        <div class="cell axe">1</div>
+        <div class="cell black_cell">
+            <img src="assets/rook_white.png" alt="white rook" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/knight_white.png" alt="white knight" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/bishop_white.png" alt="white knight" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/queen_white.png" alt="white queen" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/king_white.png" alt="white king" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/bishop_white.png" alt="white knight" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell black_cell">
+            <img src="assets/knight_white.png" alt="white knight" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell white_cell">
+            <img src="assets/rook_white.png" alt="white rook" width="26" height="26" class="small-rotate">
+        </div>
+        <div class="cell axe">1</div>
     </div>
-    <div class="cell white_cell">
-        <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26">
+    <div class="board">
+        <div class="cell axe">
+            <img src="assets/hse.png" alt="hse" width="26" height="26" class="full-rotate">
+        </div>
+        <div class="cell axe">A</div>
+        <div class="cell axe">B</div>
+        <div class="cell axe">C</div>
+        <div class="cell axe">D</div>
+        <div class="cell axe">E</div>
+        <div class="cell axe">F</div>
+        <div class="cell axe">G</div>
+        <div class="cell axe">H</div>
+        <div class="cell axe">
+            <img src="assets/hse.png" alt="hse" width="26" height="26" class="full-rotate">
+        </div>
     </div>
-    <div class="cell black_cell">
-        <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26">
-    </div>
-    <div class="cell black_cell">
-        <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26">
-    </div>
-    <div class="cell black_cell">
-        <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/pawn_black.png" alt="black pawn" width="26" height="26">
-    </div>
-</div>
-<div class="board">
-    <div class ="cell axe">6</div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-</div>
-<div class="board">
-    <div class ="cell axe">5</div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-</div>
-<div class="board">
-    <div class ="cell axe">4</div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-</div>
-<div class="board">
-    <div class ="cell axe">3</div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-    <div class="cell black_cell"></div>
-    <div class="cell white_cell"></div>
-</div>
-<div class="board">
-    <div class ="cell axe">2</div>
-    <div class="cell white_cell">
-        <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26">
-    </div>
-    <div class="cell black_cell">
-        <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26">
-    </div>
-    <div class="cell black_cell">
-        <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26">
-    </div>
-    <div class="cell black_cell">
-        <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26">
-    </div>
-    <div class="cell black_cell">
-        <img src="assets/pawn_white.png" alt="white pawn" width="26" height="26">
-    </div>
-</div>
-<div class="board">
-    <div class ="cell axe">1</div>
-    <div class="cell black_cell">
-        <img src="assets/rook_white.png" alt="white rook" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/knight_white.png" alt="white knight" width="26" height="26">
-    </div>
-    <div class="cell black_cell">
-        <img src="assets/bishop_white.png" alt="white knight" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/queen_white.png" alt="white queen" width="26" height="26">
-    </div>
-    <div class="cell black_cell">
-        <img src="assets/king_white.png" alt="white king" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/bishop_white.png" alt="white knight" width="26" height="26">
-    </div>
-    <div class="cell black_cell">
-        <img src="assets/knight_white.png" alt="white knight" width="26" height="26">
-    </div>
-    <div class="cell white_cell">
-        <img src="assets/rook_white.png" alt="white rook" width="26" height="26">
-    </div>
-</div>
-<div class = "board">
-    <div class = "cell axe"></div>
-    <div class = "cell axe">A</div>
-    <div class = "cell axe">B</div>
-    <div class = "cell axe">C</div>
-    <div class = "cell axe">D</div>
-    <div class = "cell axe">E</div>
-    <div class = "cell axe">F</div>
-    <div class = "cell axe">G</div>
-    <div class = "cell axe">H</div>
 </div>
 </body>
 </html>
