--- a/chessboard/index.html
+++ b/chessboard/index.html
@@ -92,8 +92,8 @@
             <div class="cell black"><img src="assets/white-rook.png" alt="White Rook"></div>
             <div class="cell white"><img src="assets/white-knight.png" alt="White Knight"></div>
             <div class="cell black"><img src="assets/white-bishop.png" alt="White Bishop"></div>
-            <div class="cell white"><img src="assets/white-king.png" alt="White Queen"></div>
-            <div class="cell black"><img src="assets/white-queen.png" alt="White King"></div>
+            <div class="cell white"><img src="assets/white-king.png" alt="White King"></div>
+            <div class="cell black"><img src="assets/white-queen.png" alt="White Queen"></div>
             <div class="cell white"><img src="assets/white-bishop.png" alt="White Bishop"></div>
             <div class="cell black"><img src="assets/white-knight.png" alt="White Knight"></div>
             <div class="cell white"><img src="assets/white-rook.png" alt="White Rook"></div>
